--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,9 +10,10 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "test" ]
+
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main" , "test" ]
 
 jobs:
   build:
