--- a/pom.xml
+++ b/pom.xml
@@ -3,19 +3,11 @@
   <groupId>BKBugPredictor</groupId>
   <artifactId>BKBugPredictor</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <release>15</release>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  
+  <properties>
+    <sonar.organization>stefanousagithub</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+  </properties>
+
   
   <dependencies>
 	<dependency>
