--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,19 @@
   <groupId>BKBugPredictor</groupId>
   <artifactId>BKBugPredictor</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <properties>
-    <sonar.organization>stefanousagithub</sonar.organization>
-    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-  </properties>
+  <build>
+    <sourceDirectory>src</sourceDirectory>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <release>13</release>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
-  
   <dependencies>
 	<dependency>
 	    <groupId>org.json</groupId>
